--- a/index.html
+++ b/index.html
@@ -192,7 +192,25 @@
     <li class="item-social-logo"><a class="icon-footer" href="./index.html"><svg class="icon-fill" width="24" height="24"><use href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
 </ul>
     </div>
+    <form class="form-footer">
+        <label for="user-name"class="form-footer-label">Subscribe</label>
+            <input class="form-input" type="email" name="email" placeholder="E-mail" id="user-name">
+        <button type="submit" class="form-footer-button">Subscribe</button>
+    </form>
        </div>
     </footer>
+    <div class="backdrop">
+        <div class="modal">
+            <button type="button" class="modal-close-btn"><svg width="8" height="8"><use href="./images/icons.svg#icon-close-black"></use></svg></button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+            <label class="form-label" for="user-name">Name</label><input name="user-name" type="text" class="modal-input" id="user-name">
+            <label class="form-label" for="user-tel">Phone</label><input name="user-tel" type="tel" class="modal-input">
+            <label class="form-label" for="user-email">Email</label><input name="user-email" type="email" class="modal-input">
+            <label class="form-label" for="comment">Comment</label><input name="comment" type="textarea" placeholder="Text input" class="modal-input-textarea">
+            <button type="submit" class="button">Send</button>
+            </form>
+    </div>
+    </div>
 </body>
 </html>
