--- a/index.html
+++ b/index.html
@@ -192,11 +192,13 @@
     <li class="item-social-logo"><a class="icon-footer" href="./index.html"><svg class="icon-fill" width="24" height="24"><use href="./images/icons.svg#icon-linkedin-1"></use></svg></a></li>
 </ul>
     </div>
-    <form class="form-footer">
-        <label for="user-name"class="form-footer-label">Subscribe</label>
+    <div class="form-footer">
+    <form>
+        <label for="user-name" class="form-footer-label">Subscribe</label>
             <input class="form-input" type="email" name="email" placeholder="E-mail" id="user-name">
         <button type="submit" class="form-footer-button">Subscribe</button>
     </form>
+</div>
        </div>
     </footer>
     <div class="backdrop">
@@ -205,9 +207,9 @@
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
             <label class="form-label" for="user-name">Name</label><input name="user-name" type="text" class="modal-input" id="user-name">
-            <label class="form-label" for="user-tel">Phone</label><input name="user-tel" type="tel" class="modal-input">
-            <label class="form-label" for="user-email">Email</label><input name="user-email" type="email" class="modal-input">
-            <label class="form-label" for="comment">Comment</label><input name="comment" type="textarea" placeholder="Text input" class="modal-input-textarea">
+            <label class="form-label" for="user-tel">Phone</label><input name="user-tel" type="tel" class="modal-input" id="user-tel">
+            <label class="form-label" for="user-email">Email</label><input name="user-email" type="email" class="modal-input" id="user-email">
+            <label class="form-label" for="comment">Comment</label><input name="comment" type="text" placeholder="Text input" class="modal-input-text" id="comment">
             <button type="submit" class="button">Send</button>
             </form>
     </div>
