--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
     </div>
     <div class="subscribe-footer">
         <p class="form-footer-title">Subscribe</p>
-    <form class="form-footer">
-        <label class="form-footer-label"><input class="form-input" type="email" name="email" placeholder="E-mail" id="user-name">
-        <button type="submit" class="form-footer-button">Subscribe <svg class="icon-button-footer"  widht="24" height="24"><use href="./images/icons.svg#icon-Frame"></use></svg></button></label>
+        <form class="form-footer">
+        <label class="form-footer-label"><input class="form-input" type="email" name="email" placeholder="E-mail" id="user-name"></label>
+        <button type="submit" class="form-footer-button">Subscribe <svg class="icon-button-footer" width="24" height="24"><use href="./images/icons.svg#icon-Frame"></use></svg></button>
     </form>
 </div>
        </div>
