--- a/index.html
+++ b/index.html
@@ -201,7 +201,23 @@
 </div>
        </div>
     </footer>
-
+    <div class="backdrop">
+        <div class="modal">
+            <button type="button" class="modal-close-btn"><svg width="8" height="8"><use href="./images/icons.svg#icon-close-black"></use></svg></button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+            <label class="form-label" for="user-name">Name</label>
+            <input name="user-name" type="text" class="modal-input" id="user-name-modal">
+            <label class="form-label" for="user-tel">Phone</label>
+            <input name="user-tel" type="tel" class="modal-input" id="user-tel">
+            <label class="form-label" for="user-email">Email</label>
+            <input name="user-email" type="email" class="modal-input" id="user-email">
+            <label class="form-label" for="comment">Comment</label>
+            <input name="comment" type="text" placeholder="Text input" class="modal-input-text" id="comment">
+            <button type="submit" class="button">Send</button>
+            </form>
+    </div>
+    </div>
 </body>
 </html>
 
