--- a/index.html
+++ b/index.html
@@ -206,32 +206,32 @@
             <button type="button" class="modal-close-btn"><svg class="modal-bth-icon" width="8" height="8"><use href="./images/icons.svg#icon-close-black"></use></svg></button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
-            <div class="modal-item-label">
+            <div class="modal-item">
                <label class="form-label" for="user-name">Name</label>
-            </div>
             <div class="modal-item-input-icon">
             <input name="user-name" type="text" class="modal-input" id="user-name-modal">
             <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
             </svg>
             </div>
-            <div class="modal-item-label">
-                <label class="form-label" for="user-tel">Phone</label>
             </div>
+            <div class="modal-item">
+                <label class="form-label" for="user-tel">Phone</label>
             <div class="modal-item-input-icon">
             <input name="user-tel" type="tel" class="modal-input" id="user-tel">
             <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black"></use>
             </svg>
             </div>
-            <div class="modal-item-label">
-            <label class="form-label" for="user-email">Email</label>
             </div>
+            <div class="modal-item">
+            <label class="form-label" for="user-email">Email</label>
             <div class="modal-item-input-icon">
             <input name="user-email" type="email" class="modal-input" id="user-email">
             <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black"></use>
             </svg>
+            </div>
             </div>
             <label class="form-label" for="comment">Comment</label>
             <input name="comment" type="text" placeholder="Text input" class="modal-input-text" id="comment">
