--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
             <div class="modal-item">
-               <label class="form-label" for="user-name">Name</label>
+               <label for="user-name" class="form-label" >Name</label>
             <div class="modal-item-input-icon">
             <input name="user-name" type="text" class="modal-input" id="user-name-modal">
             <svg class="input-icon" width="18" height="24">
