--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
             <div class="modal-item-textarea">
             <label class="form-label" for="user-comment ">Comment</label>
-            <input name="user-comment" type="text-area" placeholder="Text input" class="modal-input-textarea" id="user-comment">
+            <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-input-textarea"></textarea>
             </div>
             <div class="form-text">
               <input class="visually-hidden" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
