--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="modal-item">
                <label for="user-name" class="form-label" >Name</label>
             <div class="modal-item-input-icon">
-            <input name="user-name" type="text" class="modal-input" id="user-name-modal">
+            <input name="user-name" type="text" class="modal-input" id="user-name">
             <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
             </svg>
@@ -234,13 +234,15 @@
             </div>
             </div>
             <div class="modal-item-textarea">
-            <label class="form-label" for="user-comment ">Comment</label>
+            <label class="form-label" for="user-comment">Comment</label>
             <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-input-textarea"></textarea>
             </div>
             <div class="form-text">
-              <input class="visually-hidden" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
-              <label for="user-privacy" class="label-chb"><span class="label-chb-span"><svg width="10" height="8"><use href="./images/icons.svg#icon-Checkbox"></use></svg></span>I accept the terms and conditions of the<a class="label-chb-privacy"> Privacy Policy</a></label>
-            </div>
+              <input class="visually-hidden-input" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
+              <label for="user-privacy" class="label-chb">
+                <span><svg class="label-chb-span" width="10" height="8"><use href="./images/icons.svg#icon-Checkbox"></use></svg></span>
+                I accept the terms and conditions of the<a class="label-chb-privacy"> Privacy Policy</a></label>
+             </div>
             <button type="submit" class="button">Send</button>
             </form>
         </div>
