--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div class="subscribe-footer">
         <p class="form-footer-title">Subscribe</p>
         <form class="form-footer">
-        <label class="form-footer-label"><input class="form-input" type="email" name="email" placeholder="E-mail" id="user-name"></label>
+        <label for="email" class="form-footer-label"><input class="form-input" type="email" name="email" placeholder="E-mail" id="email"></label>
         <button type="submit" class="form-footer-button">Subscribe <svg class="icon-button-footer" width="24" height="24"><use href="./images/icons.svg#icon-Frame"></use></svg></button>
     </form>
 </div>
@@ -240,7 +240,7 @@
             <div class="form-text">
               <input class="visually-hidden-input" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
               <label for="user-privacy" class="label-chb">
-                <span><svg class="label-chb-span" width="10" height="8"><use href="./images/icons.svg#icon-Checkbox"></use></svg></span>
+                <span class="label-chb-span"><svg  width="10" height="8"><use href="./images/icons.svg#icon-Checkbox"></use></svg></span>
                 I accept the terms and conditions of the<a class="label-chb-privacy"> Privacy Policy</a></label>
              </div>
             <button type="submit" class="button">Send</button>
