--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@
             <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-input-textarea"></textarea>
             </div>
             <div class="form-text">
-              <input class="visually-hidden-input" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
+              <input class="visually-hidden" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
               <label for="user-privacy" class="label-chb">
                 <span class="label-chb-span"><svg  width="10" height="8"><use href="./images/icons.svg#icon-Checkbox"></use></svg></span>
                 I accept the terms and conditions of the<a class="label-chb-privacy"> Privacy Policy</a></label>
              </div>
-            <button type="submit" class="button">Send</button>
+            <button type="submit" class="button-modal">Send</button>
             </form>
         </div>
     </div>
