--- a/index.html
+++ b/index.html
@@ -240,7 +240,9 @@
             <div class="form-text">
               <input class="visually-hidden" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
               <label for="user-privacy" class="label-chb">
-                <span class="label-chb-span"><svg  width="10" height="8"><use href="./images/icons.svg#icon-Checkbox"></use></svg></span>
+                <span class="label-chb-span">
+                    <svg  width="10" height="8"><use href="./images/icons.svg#icon-Checkbox"></use></svg>
+                </span>
                 I accept the terms and conditions of the<a class="label-chb-privacy"> Privacy Policy</a></label>
              </div>
             <button type="submit" class="button-modal">Send</button>
