--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
               <input class="visually-hidden" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
               <label for="user-privacy" class="label-chb">
                 <span class="label-chb-span">
-                    <svg  width="10" height="8"><use href="./images/icons.svg#icon-Checkbox"></use></svg>
+                    <svg  width="16" height="16"><use href="./images/icons.svg#icon-Property-1click"></use></svg>
                 </span>
-                I accept the terms and conditions of the<a class="label-chb-privacy"> Privacy Policy</a></label>
+                I accept the terms and conditions of the <a class="label-chb-privacy">Privacy Policy</a></label>
              </div>
             <button type="submit" class="button-modal">Send</button>
             </form>
