--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-input-textarea"></textarea>
             </div>
             <div class="form-text">
-              <input class="visually-hidden" class="check-input" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
+              <input class="visually-hidden check-input" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
               <label for="user-privacy" class="label-chb">
                 <span class="label-chb-span">
                     <svg  width="10" height="8"><use href="./images/icons.svg#icon-Property-1click"></use></svg>
