--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               <input class="visually-hidden check-input" name="user-privacy" type="checkbox" id="user-privacy"  value="true">
               <label for="user-privacy" class="label-chb">
                 <span class="label-chb-span">
-                    <svg  width="10" height="8"><use href="./images/icons.svg#icon-Property-1click"></use></svg>
+                    <svg  width="10" height="8"><use href="./images/icons.svg#icon-Property"></use></svg>
                 </span>
                 I accept the terms and conditions of the <a class="label-chb-privacy">Privacy Policy</a></label>
              </div>
